--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pirata+One">
   <link rel="stylesheet" href="css/style.css">
   <!-- calls createjs sound API -->
-  <script src="http://code.createjs.com/soundjs-0.5.2.min.js"></script>
+  <!-- <script src="http://code.createjs.com/soundjs-0.5.2.min.js"></script> -->
 </head>
 
 <body>
