--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Effective JavaScript: Frogger</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <title>Arcade Game Clone: Island Rescue</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pirata+One">
   <link rel="stylesheet" href="css/style.css">
   <!-- calls createjs sound API -->
-  <!-- <script src="http://code.createjs.com/soundjs-0.5.2.min.js"></script> -->
+  <script src="http://code.createjs.com/soundjs-0.5.2.min.js"></script>
 </head>
 
 <body>
@@ -30,42 +31,6 @@
       </div>
 
   </section>
-
-  <!-- Win Popup -->
-  <!-- <div id="results-popup" class="popup"> -->
-
-    <!-- Win Popup Content -->
-    <!-- <div class="popup-content">
-      <span class="close">&times;</span> -->
-      <!-- <h1>Hooray!!</h1> -->
-      <!-- <h3>You found all the matches in <span id="end-time"></span>!</h3>
-      <h3>It took you <span id="total-moves"><span></h3>
-      <h3>Your star rating is: <span id="total-stars"></span> out of 3!</h3>
-      <button type="button" class="button" id="play-again-btn">
-      Play again!
-      </button>
-    </div> -->
-
-  <!-- </div> -->
-
-  <!-- Lose Results Popup -->
-  <!-- <div id="results-popup" class="popup"> -->
-
-    <!-- Resuts Popup Content -->
-    <!-- <div class="popup-content"> -->
-      <!-- <span class="close">&times;</span>
-      <h1>Hooray!!</h1>
-      <h3>You found all the matches in <span id="end-time"></span>!</h3>
-      <h3>It took you <span id="total-moves"><span></h3>
-      <h3>Your star rating is: <span id="total-stars"></span> out of 3!</h3>
-      <button type="button" class="button" id="play-again-btn">
-      Play again!
-      </button>
-    </div> -->
-
-  <!-- </div> -->
-
-
 
       <script src="js/resources.js"></script>
       <script src="js/app.js"></script>
