--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
   <!-- calls createjs sound API -->
-  <script src="http://code.createjs.com/soundjs-0.5.2.min.js"></script>
+  <script src="js/soundjs-0.6.2.min.js"></script>
   <script src="js/resources.js"></script>
   <script src="js/app.js"></script>
   <script src="js/engine.js"></script>
