--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
   </section>
 
-  <button id="mute"> <i class="fa fa-volume-up" aria-hidden="true"></i>
-  </button>
+  <span title="Mute background sound"><button id="mute"> <i class="fa fa-volume-up" aria-hidden="true"></i>
+  </button></span>
 
 
   <!-- calls createjs sound API -->
